[tool.poetry]
name = "digitalimageprocessing-course"
version = "0.1.0"
description = ""
authors = ["Artur Gęsiarz <arturgesiarz@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
requests = "^2.32.3"
notebook = "^7.2.2"
scipy = "^1.14.1"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
